# mwa_hyperdrive

./: .dockerignore  .gitattributes  .gitignore  404.html  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  URSI_hyperdrive.tex  build.rs  cpuonly.Dockerfile  example_build.sh  index.html  instructions.md  peelvis.ipynb  print.html  rustfmt.toml  searchindex.js  searchindex.json  setonix.Dockerfile  test_01_uvtable.txt  test_10_uvtable.txt  toc.html  toc.js
.github/workflows/: bench.yml  clippy.yml  coverage.yml  deploy-mdbook.yml  docker.yml  releases-readme.md  releases.yml  run-tests.yaml  run-tests.yml
beam/: Cargo.toml
beam/src/: cache.rs  error.rs  fee.rs  jones_test.rs  lib.rs  tests.rs
benches/: bench.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs  logging.rs  make_shapelet_basis_values.py  shapelets.rs
core/: Cargo.toml  README.md
core/src/: constants.rs  flux_density.rs  jones.rs  lib.rs  mod.rs  sexagesimal.rs  source.rs  source_list.rs
core/src/beam/: error.rs  fee.rs  mod.rs
core/src/coord/: azel.rs  enh.rs  hadec.rs  jones.rs  lmn.rs  mod.rs  pointing_centre.rs  radec.rs  uvw.rs  xyz.rs
core/src/flux_density/: error.rs  instrumental.rs  mod.rs
core/src/jones/: cache.rs  mod.rs
cuda/: Cargo.toml  bindgen.sh  build.rs  update_rust_bindings.sh
cuda/src/: bindings.rs  foreign.rs  lib.rs  memory.rs  memory_double.rs  memory_single.rs  model.rs  model_double.rs  model_single.rs  modeller.rs  utils.rs
cuda/src_cuda/: common.cuh  compile_flags.txt  hyperdrive.h  memory.cu  memory.h  model.cu  model.h  types.h  vis_gen.cu  vis_gen.h
defs/: beam.html  blocks.html  cal_sols.html  cal_sols_ao.html  cal_sols_hyp.html  cal_sols_hyperdrive.html  cal_sols_rts.html  coords.html  dut1.html  fd_types.html  pols.html  source_list_ao.html  source_list_fits.html  source_list_hyperdrive.html  source_list_rts.html  source_lists.html  vis_formats.html  vis_formats_read.html  vis_formats_write.html
defs/modelling/: estimating.html  intro.html  rime.html
defs/mwa/: corrections.html  dead_dipoles.html  delays.html  metafits.html  mwaf.html  mwalib.html  picket_fence.html
dev/: ndarray.html  vec1.html
docker/: Dockerfile  sdc3.toml  sdc3_inner_lobes+trecs_rot-0.15_10.fits
examples/: hyperdrive_srclist.json  hyperdrive_srclist.yaml  plot_beam_responses.py  read_fits_srclist.py  read_hyperdrive_sols.py  write_hyperdrive_srclist.py
html/: print.html  searchindex.js  searchindex.json
html/defs/: cal_sols_ao.html  cal_sols_hyperdrive.html  source_list_ao.html  source_lists.html  vis_formats_read.html  vis_formats_write.html
hyperdrive/: Cargo.toml  README.md  build.rs
hyperdrive/benches/: bench.rs
hyperdrive/src/: constants.rs
hyperdrive/src/calibrate/: args.rs
hyperdrive/src/flagging/: cotter.rs
hyperdrive/src/glob/: mod.rs
hyperdrive/src/instrument/: common.rs  error.rs  mod.rs
hyperdrive/src/visibility_gen/: mod.rs
hyperdrive/tests/calibrate/: args.rs  real_data.rs
installation/: from_source.html  intro.html  post.html  pre_compiled.html
mdbook/: README.md  book.toml
mwa_hyperdrive_cuda/: Cargo.toml  build.rs
mwa_hyperdrive_cuda/src/: foreign.rs  lib.rs
mwa_hyperdrive_cuda/src_cuda/: hyperdrive.h  vis_gen.h
scripts/: 21cma_ms_preflight.py
src/: beam.rs  constants.rs  error.rs  filenames.rs  help_texts.rs  hyperdrive-peel.code-workspace  jones_test.rs  lib.rs  main.rs  messages.rs  metafits.rs  misc.rs  pfb_gains.rs  precession.rs  rts.rs  shapelets.rs  time.rs
src_cuda/: hyperdrive.h  vis_gen.cu
srclist/: Cargo.toml  README.md
srclist/examples/: hyperdrive_srclist.json  hyperdrive_srclist.yaml  read_hyperdrive_srclist.py  write_hyperdrive_srclist.py
srclist/src/: by_beam.rs  constants.rs  convert.rs  error.rs  flux_density.rs  general_tests.rs  lib.rs  read.rs  verify.rs  veto.rs
srclist/src/ao/: mod.rs  read.rs  write.rs
srclist/src/hyperdrive/: mod.rs  read.rs  write.rs
srclist/src/rts/: mod.rs  read.rs  write.rs
srclist/src/source_lists/: components.rs  mod.rs  source.rs  source_list.rs
srclist/src/source_lists/components/: ffi.rs  mod.rs
srclist/src/types/: mod.rs
srclist/src/types/components/: mod.rs  tests.rs
srclist/src/types/flux_density/: mod.rs  tests.rs
srclist/src/types/source/: mod.rs  tests.rs
srclist/src/types/source_list/: mod.rs  tests.rs
srclist/src/utilities/: by_beam.rs  convert.rs  mod.rs  shift.rs  verify.rs
srclist/src/woden/: mod.rs  read.rs  write.rs
srclist/test_files/: hyperdrive_srclist.json  srclist_1099334672_100.yaml  srclist_all_kinds.yaml  srclist_pumav3_EoR0aegean_EoR1pietro+ForA_1090008640_100.yaml
srclist/tests/: examples.rs  hyperdrive_srclist.yaml  srclist_pumav3_EoR0aegean_EoR1pietro+ForA_1090008640_100.yaml
srclist/tests/integration/: examples.rs  main.rs
test_files/: ao_cluster_srclist.txt  gen_fits_srclists.py  gleam.fits  gleam.yaml  hyperdrive_srclist.json  hyperdrive_srclist.yaml  jack.fits  jack.yaml  lobes.fits  srclist_1099334672_100.yaml  srclist_1099334672_100_rts.txt
tests/: Cargo.toml  README.md  pumav3_EoR0aegean_EoR1pietro+ForA_1065880128_2000.yaml  tests.rs
tests/1090008640/: 1090008640_01.mwaf  1090008640_02.mwaf  1090008640_03.mwaf  README.md  srclist_pumav3_EoR0aegean_EoR1pietro+ForA_1090008640_peel100.txt
tests/calibrate/: args.rs  full_obsids.rs  mod.rs  real_data.rs
tests/integration/: jones_test.rs  main.rs  no_stderr.rs
tests/integration/calibrate/: cli_args.rs  mod.rs
tests/integration/di_calibrate/: cli_args.rs  mod.rs
tests/integration/modelling/: calibrate.rs  mod.rs  simulate_vis.rs  vis_simulate.rs
tests/integration/solutions_apply/: cli_args.rs  mod.rs
tests/integration_tests/: main.rs  no_stderr.rs
tests/integration_tests/di_calibrate/: arg_files.rs  cli_args.rs  missing_files.rs  mod.rs  multi_timeblock.rs
tests/integration_tests/peel/: mod.rs
tests/integration_tests/solutions_apply/: autos.rs  cli_args.rs  mod.rs
tests/src/: full_obsids.rs  gpuboxes.rs  lib.rs  real_data.rs  reduced_obsids.rs
user/: beam.html  help.html  intro.html  plotting.html
(+496 files in other folders)
