[package]
name = "mwa_hyperdrive_beam"
version = "0.0.0"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
edition = "2021"
license = "MPL-2.0"

[features]
hdf5-static = ["mwa_hyperbeam/hdf5-static"]
cuda = ["mwa_hyperbeam/cuda"]
cuda-single = ["mwa_hyperbeam/cuda-single"]

[dependencies]
cfg-if = "1.0.*"
dashmap = "4.0.*"
log = "0.4.*"
rayon = "~1"
mwa_hyperbeam = { git = "https://github.com/MWATelescope/mwa_hyperbeam", branch = "v0.4.0-WIP" }
mwa_rust_core = "0.2.*"
ndarray = "0.14.*"
thiserror = "1.0.*"

[dev-dependencies]
approx = { version = "0.4.*", features = ["num-complex"] }
ndarray = { version = "0.14.*", features = ["approx"] }
serial_test = "0.5.*"
