[package]
name = "mwa_hyperdrive_common"
version = "0.0.0"
edition = "2018"
license = "MPL-2.0"

[dependencies]
atty = "0.2.*"
chrono = "0.4.*"
fern = { version = "0.6.*", features = ["chrono", "colored"] }
log = "0.4.*"

[build-dependencies]
built = { version = "0.5.*", features = ["chrono", "git2"] }
