[package]
name = "mwa_hyperdrive_common"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[features]
default = []
cuda = ["marlu/cuda"]
erfa-static = ["marlu/erfa-static"]
cfitsio-static = ["marlu/cfitsio-static"]
cuda-static = ["marlu/cuda-static"]

[dependencies]
atty = "0.2.*"
cfg-if = "1.0.*"
chrono = "0.4.*"
clap = { version = "3.0.*", features = ["derive", "wrap_help"] }
fern = { version = "0.6.*", features = ["chrono", "colored"] }
itertools = "0.10.*"
indicatif = { version = "0.16.*", features = ["rayon"] }
lazy_static = "1.4.*"
log = "0.4.*"
marlu = "0.4.*"
serde_json = "1.0.*"
thiserror = "1.0.*"
toml = "0.5.*"

[build-dependencies]
built = { version = "0.5.*", features = ["chrono", "git2"] }
