[package]
name = "mwa_hyperdrive_core"
version = "0.1.0"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[features]
default = ["beam"]
beam = ["mwa_hyperbeam", "dashmap"]
erfa-static = ["erfa-sys/static"]
hdf5-static = ["mwa_hyperbeam/hdf5-static"]
cfitsio-static = ["mwalib/cfitsio-static"]
all-static = ["erfa-static", "hdf5-static", "cfitsio-static"]

[dependencies]
erfa-sys = "0.1.*"
log = "0.4.*"
mwalib = "0.6.*"
num = "0.4.*"
rayon = "~1"
serde = { version = "1.0.*", features = ["derive"] }
thiserror = "1.0.*"

dashmap = { version = "4.0.*", optional = true }
# mwa_hyperbeam = { version = "0.3.*", optional = true }
mwa_hyperbeam = { path = "/home/chj/Software/personal/mwa_hyperbeam", optional = true }

[dev-dependencies]
# approx = { version = "0.4.*", features = ["num-complex"] }
approx = { git = "https://github.com/brendanzab/approx", rev = "68aaa77", features = ["num-complex"] }
ndarray = { version = "^0", features = ["approx"] }
serial_test = "0.5.*"
