[package]
name = "mwa_hyperdrive_core"
version = "0.1.0"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[features]
default = ["mwalib", "erfa", "beam"]
beam = ["mwa_hyperbeam", "dashmap"]
erfa = ["erfa-sys"]
erfa-static = ["erfa-sys/static"]
hdf5-static = ["mwa_hyperbeam/hdf5-static"]
cfitsio-static = ["mwalib", "mwalib/cfitsio-static"]
all-static = ["erfa-static", "hdf5-static", "cfitsio-static"]

[dependencies]
log = "0.4.*"
ndarray = "0.15.*"
num = "0.4.*"
rayon = "~1"
serde = { version = "1.0.*", features = ["derive"] }
thiserror = "1.0.*"

# Needed to implement AbsDiffEq on the Jones type. Makes testing much easier!
approx = { version = "0.5.*", features = ["num-complex"] }

mwalib = { version = "0.8.*", optional = true }

erfa-sys = { version = "0.1.*", optional = true }

dashmap = { version = "4.0.*", optional = true }
# mwa_hyperbeam = { version = "0.3.*", optional = true }
mwa_hyperbeam = { git = "https://github.com/cjordan/mwa_hyperbeam", branch = "parallactic", optional = true }

[dev-dependencies]
serial_test = "0.5.*"
