[package]
name = "mwa_hyperdrive"
version = "0.1.0"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
erfa-static = ["mwa_hyperdrive_core/erfa-static"]

[build-dependencies]
bindgen = "0.55.1"
built = { version = "0.4.3", features = ["chrono", "git2"] }
pkg-config = "0.3.19"

[dev-dependencies]
approx = "0.4.0"
assert_cmd = "1.0.1"
criterion = "0.3.3"
flate2 = "1.0.18"
indoc = "1.0.3"
tempfile = "3.1.0"

[dependencies]
anyhow = "1.0.33"
byteorder = "1.3.4"
chrono = "0.4.19"
fern = { version = "0.6.0", features = ["chrono"] }
glob = "0.3.0"
indicatif = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.11"
num = "0.3.0"
rayon = "1.4.1"
regex = "1.3.9"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.20"
thiserror = "1.0.21"
toml = "0.5.7"

mwalib = { git = "https://github.com/MWATelescope/mwalib", tag = "v0.4.2" }
mwa_hyperdrive_core =    { path = "../core" }
mwa_hyperdrive_cuda =    { path = "../cuda" }
mwa_hyperdrive_srclist = { path = "../srclist" }

[[bench]]
name = "bench"
harness = false
