[package]
name = "mwa_hyperdrive_srclist"
version = "0.1.0"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
description = "Code for sky-model source lists"
repository = "https://github.com/MWATelescope/mwa_hyperdrive"
homepage = "https://github.com/MWATelescope/mwa_hyperdrive"
exclude = [".github/*", "test_files/*"]

[features]
default = []
cuda = ["mwa_hyperdrive_cuda"]
cfitsio-static = ["mwa_rust_core/cfitsio-static"]
erfa-static = ["mwa_rust_core/erfa-static"]
hdf5-static = ["mwa_hyperdrive_beam/hdf5-static"]
all-static = ["erfa-static", "hdf5-static", "cfitsio-static"]

[dependencies]
itertools = "0.10.*"
lazy_static = "1.4.*"
log = "0.4.*"
mwa_rust_core = "0.1.*"
ndarray = { version = "0.14.*", features = ["rayon"] }
rayon = "~1"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_yaml = "0.8.*"
structopt = "0.3.*"
strum = "0.21.*"
strum_macros = "0.21.*"
thiserror = "1.0.*"

mwa_hyperdrive_common = { path = "../common" }
mwa_hyperdrive_beam =   { path = "../beam" }
mwa_hyperdrive_cuda =   { path = "../cuda", optional = true }

[dev-dependencies]
indoc = "1.0.*"
serial_test = "0.5.*"
tempfile = "3.1.*"

approx = "0.4.*"
ndarray = { version = "0.14.*", features = ["approx"] }
