[package]
name = "mwa_hyperdrive_tests"
version = "0.1.0"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
assert_cmd = "1.0.*"
flate2 = "1.0.*"
serde_json = "1.0.*"
serial_test = "0.5.*"
tempfile = "3.1.*"
toml = "0.5.*"

mwa_hyperdrive = { path = ".." }
